# AVA

./: .gitignore  =0.1.0  CLAUDE.md  CURRENT_STATUS.md  IMPLEMENTATION_PLAN.md  README.md  dashboard.py  game_cards_visual_page.py  magnus_backup_before_merge.dump  manual_login_xtrades.py  package.json  pyproject.toml  requirements.txt  setup_qa_autostart.ps1  sports_betting_hub_page.py  start_qa.py  start_qa_daemon.bat  start_qa_runner.py  start_qa_watchdog.bat  test_modern_xtrades.py  test_xtrades_sync.py  verification_plan.md  verify_full_stack.py  xtrades_sync.bat
.claude/agents/: spec-performance-analyzer.md  spec-task-executor.md
.claude/orchestrator/: AUTO_COMMIT_SAFETY_FEATURE.md  config.yaml  main_orchestrator.py  orchestrator_integration.py  state_machine.py
.pids/: qa_runner.pid
backend/: config.py  debug_services.py  main.py  requirements.txt
backend/app/: main.py
backend/database/: connection.py
backend/infrastructure/: __init__.py  ai_client.py  async_db.py  async_robinhood.py  async_yfinance.py  background_tasks.py  batch_fetcher.py  cache.py  circuit_breaker.py  database.py  errors.py  observability.py  rate_limiter.py  validation.py  websocket_manager.py
backend/models/: market.py
backend/routers/: advanced_technicals.py  agents.py  analytics.py  automations.py  briefings.py  cache.py  chat.py  dashboard.py  discord.py  earnings.py  enhancements.py  goals.py  integration_test.py  knowledge.py  notifications.py  options.py  options_indicators.py  orchestrator.py  portfolio.py  portfolio_v2.py  predictions.py  qa_dashboard.py  reasoning.py  research.py  scanner.py  settings.py  smart_money.py  sports.py  sports_streaming.py  sports_v2.py  stocks_tiles.py  strategy.py  subscriptions.py  system.py  technicals.py  universe.py  watchlist.py  xtrades.py
backend/services/: advanced_portfolio_analytics.py  advanced_risk_models.py  ai_csp_enhancements.py  ai_csp_recommender.py  ai_sports_predictor.py  dashboard_service.py  data_validation.py  llm_earnings_analyzer.py  llm_options_strategist.py  llm_sports_analyzer.py  metadata_service.py  portfolio_service.py  portfolio_service_v2.py  positions_sync_service.py  prediction_service.py  research_service.py  scanner_service.py  sports_data_access.py  sports_infrastructure.py  sports_service.py  stock_score_service.py  strategy_service.py  universe_service.py
backend/tests/: test_api_flow.py
backend/utils/: __init__.py  async_file_io.py  async_market_data.py  datetime_utils.py  magnus_local_llm.py
chroma_db/: chroma.sqlite3
database_dump/: README.md  schema.sql
docs/: AI_ARCHITECTURE.md  AI_INTEGRATION_REVIEW.md  GITHUB_OPTIONS_STRATEGIES_REPOS.md  PERFORMANCE_OPTIMIZATIONS.md
docs/ai/: ai-integration-analysis.md
docs/database/: DATABASE_OPTIMIZATION_REPORT.md  database-infrastructure-analysis.md  quick-wins.md
docs/features/: STOCKS_HUB_V2.md
docs/performance/: FOLLOW_UP_PERFORMANCE_REVIEW.md  frontend-performance-analysis.md  quick-wins-implementation.md  vite.config.optimized.ts
docs/reports/: FINAL_STATUS.md
docs/scripts/: magnus-reviewer.ps1
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  setupTests.ts
migrations/: cached_positions.sql  performance_indexes_migration.sql  premium_data_schema.sql  scanner_performance_indexes.sql  scanner_watchlists_cache.sql  sports_indexes_migration.sql
pages/: best_bets_unified_page.py  kalshi_nfl_markets_page.py
scripts/: analyze_features_efficiency.py  background_premium_scanner.py  background_premium_scanner_robinhood.py  check_premiums.py  fast_add_all_stocks.py  load_documents.py  magnus-reviewer.sh  populate_all_us_stocks.py  populate_feature_specs.py  populate_full_universe.py  populate_stock_etf_universe.py  run_positions_migration.py  run_scheduled_scan.bat  scheduled_premium_scanner.py  send_fsu_bet_slip_alert.py  setup_scheduled_tasks.ps1  show_universe_summary.py  start_backend.sh  sync_watchlists.py  update_premiums.py  update_stocks_hub_spec.py
scripts/debug/: debug_dropdown_issue.py  explore_earnings_data.py
scripts/utilities/: game_watchlist_monitor.py  migrate_database.py  sync_kalshi_team_winners.py
src/: advanced_betting_ai_agent.py  ai_flow_analyzer.py  ai_premium_scanner.py  ai_research_service.py  alert_manager.py  auto_balance_recorder.py  ava_signal_advisor.py  calendar_spread_analyzer.py  config_manager.py  csp_opportunities_finder.py  csp_recovery_analyzer.py  database_scanner.py  delisted_symbols_manager.py  discord_message_sync.py  discord_premium_alert_sync.py  discord_signal_extractor.py  discord_telegram_alerts.py  earnings_manager.py  earnings_sync_service.py  email_game_reports.py  enhanced_options_fetcher.py  enhanced_sports_predictor.py  enhanced_zone_analyzer.py  espn_kalshi_matcher.py  espn_live_data.py  espn_nba_live_data.py  espn_ncaa_live_data.py  espn_rate_limiter.py  fibonacci_calculator.py  game_watchlist_manager.py  game_watchlist_monitor.py  general_market_evaluator.py  kalshi_ai_evaluator.py  kalshi_client_v2.py  kalshi_db_manager.py  kalshi_integration.py  kalshi_public_client.py  live_betting_analyzer.py  magnus_local_llm.py  ncaa_realtime_sync.py  (+62 more)
src/ai/: cost_tracker.py  model_clients.py  position_data_aggregator.py  position_llm_analyzer.py  position_recommendation_aggregator.py  position_recommendation_service.py  sports_sentiment_embedder.py
src/ai_options_agent/: ai_options_db_manager.py  llm_manager.py
src/api/: example_usage.py  graphql_layer.py  redis_cache.py
src/ava/: INTEGRATION_GUIDE.md  agent_aware_nlp_handler.py  autonomous_agent.py  autonomous_task_system.py  ava_personality.py  charts.py  conversation_memory_manager.py  db_manager.py  discord_knowledge.py  enhanced_project_handler.py  integration_example.py  legion_task_creator.py  magnus_integration.py  magnus_project_knowledge.py  nlp_handler.py  omnipresent_ava.py  omnipresent_ava_enhanced.py  omnipresent_ava_simple.py  (+10 more)
tests/: conftest.py  test_premium_scanner_v2.py  test_scanner_endpoints.py  verify_full_stack.py  verify_integration.py
(+467 files in other folders)
